--- a/idhlagencytechtest/public/index.html
+++ b/idhlagencytechtest/public/index.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>Bark</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/css/layout.css">
   </head>
   <body>
         <header class="header">
         <div class="header__logo">B*RK</div>
-            <button class="header__cart-btn"  Text="Click To Open" aria-label="Open Cart">
+            <button class="header__cart-btn" aria-label="Open Cart">
             <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M6 2L3 6V20C3 21.1046 3.89543 22 5 22H19C20.1046 22 21 21.1046 21 20V6L18 2H6ZM6 4H18L19 6H5L6 4ZM5 8H19V20H5V8ZM10 12C10 13.1046 10.8954 14 12 14C13.1046 14 14 13.1046 14 12H10Z" fill="currentColor"/></svg>
         </button>
         </button>
