added content block html and stylesheets

--- a/idhlagencytechtest/public/index.html
+++ b/idhlagencytechtest/public/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="src/css/layout.css">
   </head>
   <body>
+
         <header class="header">
         <div class="header__logo">B*RK</div>
             <button class="header__cart-btn" aria-label="Open Cart">
@@ -14,8 +15,25 @@
         </button>
         </button>
     </header>
-    <div id="root">
-    </div>
+
+     <main class="page-layout">
+        <section class="page-layout__content-block">
+            <h1 class="content-block__title">Ornare Vulputate Elit</h1>
+            <p class="content-block__text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in.
+            </p>
+        </section>
+
+        <section class="page-layout__product-showcase">
+            <div class="product-card">
+                <div class="product-card__image-temp"></div>
+                <h2 class="product-card__title">Natures Menu Dog Food Can Chicken</h2>
+                <p class="product-card__price">£22.81</p>  
+                <button class="button button--primary">Add To Cart</button>
+            </div>
+        </section>
+    </main>
+
      <p> Title</p>
   </body>
 </html>
