added source image for the store item

--- a/idhlagencytechtest/public/index.html
+++ b/idhlagencytechtest/public/index.html
@@ -25,7 +25,7 @@
 
         <section class="page-layout__product-showcase product-showcase">
             <div class="product-card">
-                <img src="" alt="Natures Menu Dog Food Can Chicken" class="product-card__image">
+                <img src="\img\DogFood_1537x2048px_32_1080x.jpg" alt="Natures Menu Dog Food Can Chicken" class="product-card__image">
                 <h2 class="product-card__title">Natures Menu Dog Food Can Chicken</h2>
                 <p class="product-card__price">£22.81</p>
                 
@@ -44,7 +44,7 @@
 
         <div class="slide-cart__content">
             <div class="cart-item">
-                <img src="" alt="Dog Food" class="cart-item__image">
+                <img src="img\DogFood_1537x2048px_32_1080x.jpg" alt="Dog Food" class="cart-item__image">
                 <div class="cart-item__details">
                     <p class="cart-item__name">Natures Menu Dog Food Can Chicken</p>
                     <p class="cart-item__price">£22.81</p>
